--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,12 +5,26 @@ spring:
   application:
     name: "prophius-assessment"
 
-  profiles:
-    active: mysql
-
   devtools:
     restart:
       enabled: true
+
+  datasource:
+    url: jdbc:postgresql://localhost:5678/prophius
+    username: postgres
+    password: md5d8861c5b33bc418686912b1c9512c83f
+    driver-class-name: org.postgresql.Driver
+
+    jpa:
+      hibernate:
+        ddl-auto: create-drop
+        naming:
+          implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+      show-sql: false
+      properties:
+        hibernate:
+          format_sql: true
+          dialect: org.hibernate.dialect.PostgreSQL94Dialect
 
   security:
     user:
